--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -10,7 +10,7 @@
     "Some introduction stuff to go here ...\n",
     "\n",
     "# Running the notebook\n",
-    "Execute the cells 1 by 1 by taping `ctrl + enter` or `ctrl + shift + enter`\n",
+    "Execute the cells 1 by 1 by taping `ctrl + enter` or `shift + enter`\n",
     "\n",
     "__Make sure to upload the file before continuing the rest of the notebook__\n",
     "\n",
