--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Notebook for Calculating \n",
     "\n",
+    "Compute seasonal cycle of precipitation over selected area\n",
     "\n",
-    "Some introduction stuff to go here ...\n",
     "\n",
     "# Running the notebook\n",
     "Execute the cells 1 by 1 by taping `ctrl + enter` or `shift + enter`\n",
@@ -240,9 +240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pangeo)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "jupyter"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
