adding geoviews example to script

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -38,6 +38,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geoviews as gv\n",
+    "import geoviews.feature as gf\n",
+    "from cartopy import crs\n",
+    "\n",
+    "gv.extension('bokeh', 'matplotlib')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,6 +85,16 @@
    "outputs": [],
    "source": [
     "ds[['precip', 'phis']].phis.hvplot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble.opts(projection=crs.Robinson())"
    ]
   },
   {
