Multiple files selection

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -63,8 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create file uploader\n",
-    "file_upload = FileUpload()\n",
+    "# Create file uploade\n",
+    "# To load several files press shift with selecting - \n",
+    "#all the files have to be selected at the same time.\n",
+    "\n",
+    "file_upload = FileUpload(multiple=True)\n",
     "file_upload"
    ]
   },
