Add use 2 files instead of one

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -78,7 +78,10 @@
    "outputs": [],
    "source": [
     "bytes_data = BytesIO(file_upload.data[0])\n",
-    "ds = xr.open_dataset(bytes_data)"
+    "ds = xr.open_dataset(bytes_data)\n",
+    "\n",
+    "bytes_data = BytesIO(file_upload.data[1])\n",
+    "ds1 = xr.open_dataset(bytes_data)"
    ]
   },
   {
