Add Plot map absolute value and difference

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "# Notebook for Calculating \n",
     "\n",
+    "Basic diagnostic on precipitation - enable comparison between two simulations\n",
+    "\n",
     "Compute seasonal cycle of precipitation over selected area\n",
     "\n",
     "\n",
     "# Running the notebook\n",
     "Execute the cells 1 by 1 by taping `ctrl + enter` or `shift + enter`\n",
     "\n",
-    "__Make sure to upload the file before continuing the rest of the notebook__\n",
+    "__Make sure to upload 2 file before continuing the rest of the notebook__\n",
     "\n",
     "If you want to change the longitude and latitude bounds look in the data extraction section.\n",
     "\n",
@@ -31,6 +33,7 @@
     "\n",
     "# Data manipulation and storage\n",
     "import xarray as xr\n",
+    "import numpy as np\n",
     "\n",
     "# Holoviews graphing\n",
     "import hvplot.xarray\n",
@@ -46,6 +49,7 @@
     "import geoviews as gv\n",
     "import geoviews.feature as gf\n",
     "from cartopy import crs\n",
+    "import cartopy.feature as cf\n",
     "\n",
     "gv.extension('bokeh', 'matplotlib')"
    ]
@@ -63,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create file uploade\n",
+    "# Create file upload\n",
     "# To load several files press shift with selecting - \n",
     "#all the files have to be selected at the same time.\n",
     "\n",
@@ -90,7 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds[['precip', 'phis']].phis.hvplot()"
+    "#Scale precipitation to convert in mm/day\n",
+    "ds['precip'] = ds['precip']*86400\n",
+    "ds1['precip'] = ds1['precip']*86400"
    ]
   },
   {
@@ -99,8 +105,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds[['precip', 'phis']].precip.hvplot(title=\"Dataset 1\",\n",
+    "                                     width=300,\n",
+    "                                     height=300) + ds1[['precip', 'phis']].precip.hvplot(title=\"Dataset 2\",\n",
+    "                                                                                                   width=300,\n",
+    "                                                                                                   height=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot Maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graticules = cf.NaturalEarthFeature(\n",
+    "    category='physical',\n",
+    "    name='graticules_30',\n",
+    "    scale='110m')\n",
+    "\n",
     "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "ensemble.opts(projection=crs.Robinson())"
+    "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble.opts(title=\"Precipitation\",\n",
+    "              width=400,\n",
+    "              height=200,\n",
+    "              colorbar=True,\n",
+    "              cmap='YlGnBu',\n",
+    "              projection=crs.Robinson()) + ensemble1.opts(width=400,\n",
+    "                                                         height=200,\n",
+    "                                                         colorbar=True,\n",
+    "                                                         cmap='YlGnBu',projection=crs.Robinson())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute difference between two simulations\n",
+    "difference = (ds.precip - ds1.precip)\n",
+    "diff_zone = difference.sel(lat=slice(40, -40), lon=slice(-180, 180))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,colorbar=True,cmap='RdBu_r') "
    ]
   },
   {
@@ -118,7 +178,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_precip = ds[['precip', 'phis']]"
+    "ds_precip = ds[['precip', 'phis']]\n",
+    "ds1_precip = ds[['precip', 'phis']]\n",
+    "\n",
+    "# Convert to mm/day\n",
+    "ds_precip['precip'] =  ds_precip['precip'] *86400\n",
+    "ds1_precip['precip'] =  ds1_precip['precip'] *86400"
    ]
   },
   {
@@ -136,7 +201,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "# Analysis"
    ]
