update plotting customization

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "Basic diagnostic on precipitation - enable comparison between two simulations\n",
     "\n",
-    "Compute seasonal cycle of precipitation over selected area\n",
+    "- Plot monthly mean precipitation and precipitation difference between simulation 1 & 2\n",
+    "- Compute seasonal cycle of precipitation over selected area\n",
     "\n",
     "\n",
     "# Running the notebook\n",
@@ -27,6 +28,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install palettable\n",
+    "# Download new color palette\n",
+    "#Crameri : \n",
+    "#palettable.scientific.sequential / palettable.scientific.diverging\n",
+    "#from palettable.scientific.sequential import Oslo_10\n",
+    "#cmap=Oslo_10.mpl_colormap\n",
+    "#https://jiffyclub.github.io/palettable/#documentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# File upload widegt\n",
     "from ipywidgets import FileUpload\n",
     "from io import BytesIO\n",
@@ -37,7 +53,8 @@
     "\n",
     "# Holoviews graphing\n",
     "import hvplot.xarray\n",
-    "import holoviews as hv"
+    "import holoviews as hv\n",
+    "from holoviews import opts"
    ]
   },
   {
@@ -125,22 +142,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graticules = cf.NaturalEarthFeature(\n",
-    "    category='physical',\n",
-    "    name='graticules_30',\n",
-    "    scale='110m')\n",
+    "#graticules = cf.NaturalEarthFeature(\n",
+    "#    category='physical',\n",
+    "#    name='graticules_30',\n",
+    "#    scale='110m')\n",
+    "\n",
+    "opts.defaults(opts.Image(cmap='YlGnBu',color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
     "\n",
     "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "ensemble.opts(title=\"Precipitation\",\n",
-    "              width=400,\n",
-    "              height=200,\n",
-    "              colorbar=True,\n",
-    "              cmap='YlGnBu',\n",
-    "              projection=crs.Robinson()) + ensemble1.opts(width=400,\n",
-    "                                                         height=200,\n",
-    "                                                         colorbar=True,\n",
-    "                                                         cmap='YlGnBu',projection=crs.Robinson())\n"
+    "(ensemble.opts(title=\"Precipitation (mm/day)\",projection=crs.Robinson()) + \n",
+    " ensemble1.opts(colorbar=True,align='end',projection=crs.Robinson()))\n"
    ]
   },
   {
@@ -160,7 +172,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,colorbar=True,cmap='RdBu_r') "
+    "gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,\n",
+    "                                                                  colorbar=True,cmap='RdBu_r',color_levels=20,clim=(-15,15),\n",
+    "                                                                  xlabel='Longitude',ylabel='Latitude',\n",
+    "                                                                  title='Precipitation anomaly (mm/day)')"
    ]
   },
   {
