--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -130,6 +130,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alti = ds['phis']/9.81\n",
+    "alti.hvplot()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,17 +152,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#graticules = cf.NaturalEarthFeature(\n",
-    "#    category='physical',\n",
-    "#    name='graticules_30',\n",
-    "#    scale='110m')\n",
+    "# Plot monthly precipitations\n",
+    "topo = gv.Dataset(alti).to(gv.Image, ['lon','lat'],'phis')\n",
     "\n",
     "opts.defaults(opts.Image(cmap='YlGnBu',color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
     "\n",
     "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "(ensemble.opts(title=\"Precipitation (mm/day)\",projection=crs.Robinson()) + \n",
-    " ensemble1.opts(colorbar=True,align='end',projection=crs.Robinson()))\n"
+    "(ensemble.opts(title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False) + \n",
+    " ensemble1.opts(colorbar=True,title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False))\n"
    ]
   },
   {
@@ -172,10 +182,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,\n",
+    "# Plot differences\n",
+    "alti_zoom = alti.sel(lat=slice(40,-40),lon=slice(-180,180))\n",
+    "topo_zoom = gv.Dataset(alti_zoom).to(gv.Image, ['lon','lat'],'phis')\n",
+    "\n",
+    "(gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,\n",
     "                                                                  colorbar=True,cmap='RdBu_r',color_levels=20,clim=(-15,15),\n",
     "                                                                  xlabel='Longitude',ylabel='Latitude',\n",
-    "                                                                  title='Precipitation anomaly (mm/day)')"
+    "                                                                  title='Precipitation anomaly (mm/day)')*\n",
+    " gv.operation.contours(topo_zoom,levels=[10]).opts(show_legend=False))"
    ]
   },
   {
