Add Scientific ColorMap (F.Crameri)

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -28,13 +28,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install palettable\n",
     "# Download new color palette\n",
     "#Crameri : \n",
     "#palettable.scientific.sequential / palettable.scientific.diverging\n",
     "#from palettable.scientific.sequential import Oslo_10\n",
     "#cmap=Oslo_10.mpl_colormap\n",
-    "#https://jiffyclub.github.io/palettable/#documentation"
+    "#https://jiffyclub.github.io/palettable/#documentation\n",
+    "!pip install palettable\n",
+    "from palettable.scientific.sequential import Davos_10_r\n",
+    "from palettable.scientific.diverging import Vik_10\n"
    ]
   },
   {
@@ -155,7 +157,7 @@
     "# Plot monthly precipitations\n",
     "topo = gv.Dataset(alti).to(gv.Image, ['lon','lat'],'phis')\n",
     "\n",
-    "opts.defaults(opts.Image(cmap='YlGnBu',color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
+    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
     "\n",
     "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
@@ -187,7 +189,7 @@
     "topo_zoom = gv.Dataset(alti_zoom).to(gv.Image, ['lon','lat'],'phis')\n",
     "\n",
     "(gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,\n",
-    "                                                                  colorbar=True,cmap='RdBu_r',color_levels=20,clim=(-15,15),\n",
+    "                                                                  cmap=Vik_10.mpl_colormap,color_levels=20,clim=(-15,15),\n",
     "                                                                  xlabel='Longitude',ylabel='Latitude',\n",
     "                                                                  title='Precipitation anomaly (mm/day)')*\n",
     " gv.operation.contours(topo_zoom,levels=[10]).opts(show_legend=False))"
