Fix presentation issue and had seasonal cycle

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -9,8 +9,8 @@
     "Basic diagnostic on precipitation - enable comparison between two simulations\n",
     "\n",
     "- Plot monthly mean precipitation and precipitation difference between simulation 1 & 2\n",
+    "- Compute seasonal cycle of precipitation at one location\n",
     "- Compute seasonal cycle of precipitation over selected area\n",
-    "\n",
     "\n",
     "# Running the notebook\n",
     "Execute the cells 1 by 1 by taping `ctrl + enter` or `shift + enter`\n",
@@ -35,7 +35,9 @@
     "#cmap=Oslo_10.mpl_colormap\n",
     "#https://jiffyclub.github.io/palettable/#documentation\n",
     "!pip install palettable\n",
-    "from palettable.scientific.sequential import Davos_10_r\n",
+    "from palettable.scientific.sequential import Davos_10_r, Oleron_15\n",
+    "\n",
+    "\n",
     "from palettable.scientific.diverging import Vik_10\n"
    ]
   },
@@ -137,8 +139,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alti = ds['phis']/9.81\n",
-    "alti.hvplot()\n"
+    "# Compute elevation from phis parameter\n",
+    "ds['alti'] = ds['phis']/9.81\n",
+    "ds1['alti'] = ds1['phis']/9.81\n",
+    "ds.alti.hvplot()\n"
    ]
   },
   {
@@ -149,22 +153,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Plot monthly precipitations\n",
-    "topo = gv.Dataset(alti).to(gv.Image, ['lon','lat'],'phis')\n",
-    "\n",
-    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
-    "\n",
-    "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "(ensemble.opts(title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
-    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False) + \n",
-    " ensemble1.opts(colorbar=True,title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
-    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False))\n"
+    "Plot monthly mean precipitation for simulation 1 & 2"
    ]
   },
   {
@@ -173,9 +165,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute difference between two simulations\n",
-    "difference = (ds.precip - ds1.precip)\n",
-    "diff_zone = difference.sel(lat=slice(40, -40), lon=slice(-180, 180))"
+    "# Plot monthly precipitations\n",
+    "topo = gv.Dataset(ds).to(gv.Image, ['lon','lat'],'alti')\n",
+    "\n",
+    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
+    "\n",
+    "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "(ensemble.opts(\n",
+    "    title=\"Precipitation (mm/day)\",projection=crs.Robinson())* \n",
+    " gv.operation.contours(topo,levels=[10]).opts(\n",
+    "     show_legend=False,line_width=1.5) + \n",
+    " ensemble1.opts(\n",
+    "     colorbar=True,title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(\n",
+    "     show_legend=False),line_width=1.5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot monthly mean precipitation anomaly between simulation 1 & 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute difference between two simulations & zoom over specific region\n",
+    "difference = (ds.precip - ds1.precip)"
    ]
   },
   {
@@ -185,37 +206,28 @@
    "outputs": [],
    "source": [
     "# Plot differences\n",
-    "alti_zoom = alti.sel(lat=slice(40,-40),lon=slice(-180,180))\n",
-    "topo_zoom = gv.Dataset(alti_zoom).to(gv.Image, ['lon','lat'],'phis')\n",
-    "\n",
-    "(gv.Dataset(diff_zone).to(gv.Image, ['lon', 'lat'], 'precip').opts(width=600,height=300,\n",
-    "                                                                  cmap=Vik_10.mpl_colormap,color_levels=20,clim=(-15,15),\n",
-    "                                                                  xlabel='Longitude',ylabel='Latitude',\n",
-    "                                                                  title='Precipitation anomaly (mm/day)')*\n",
-    " gv.operation.contours(topo_zoom,levels=[10]).opts(show_legend=False))"
+    "(gv.Dataset(difference).to(gv.Image, ['lon', 'lat'], 'precip').opts(\n",
+    "    width=600,height=300,\n",
+    "    cmap=Vik_10.mpl_colormap,color_levels=20,clim=(-15,15),\n",
+    "    colorbar=True,\n",
+    "    xlabel='Longitude',ylabel='Latitude',\n",
+    "    title='Precipitation anomaly (mm/day)',\n",
+    "    projection=crs.Robinson())*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False,cmap='gray_r',line_width=1.5))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data extraction \n",
-    "\n",
-    "Here we take only the variables we need from the dataset"
+    "# Plot seasonal cycles at one point"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ds_precip = ds[['precip', 'phis']]\n",
-    "ds1_precip = ds[['precip', 'phis']]\n",
-    "\n",
-    "# Convert to mm/day\n",
-    "ds_precip['precip'] =  ds_precip['precip'] *86400\n",
-    "ds1_precip['precip'] =  ds1_precip['precip'] *86400"
+    "Here we first zoom on extended area just for esthetic issues"
    ]
   },
   {
@@ -226,20 +238,19 @@
    "source": [
     "# Select the desired zone\n",
     "# /!\\ Slice works based on the ordering in coordinates, here lat goes from +90 -> -90 and lon from -180 -> +180\n",
-    "ds_precip_zone = ds_precip.sel(lat=slice(35, 0), lon=slice(65, 85))\n",
-    "# Calculate the altitude from the phi parameter\n",
-    "ds_precip_zone['alti'] = ds_precip_zone['phis'] / 9.81"
+    "ds_zone = ds.sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
+    "ds1_zone = ds1.sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
+    "topo_zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon','lat'],'alti')\n",
+    "\n",
+    "zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "zoom1 = gv.Dataset(ds1_zone).to(gv.Image, ['lon', 'lat'], 'precip')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "# Analysis"
+    "Then we compute cycle at one location and plot"
    ]
   },
   {
@@ -248,7 +259,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_precip_zone.precip.hvplot.image(label='precip')"
+    "# Select lon & lat for a poit where to compute seasonal cycle.\n",
+    "ilat=-5\n",
+    "ilon=-30\n",
+    "\n",
+    "precip_curve = hv.Curve(zoom.select(lon=ilon,lat=ilat), kdims=['time_counter'])\n",
+    "\n",
+    "# Plot \n",
+    "(zoom * gv.operation.contours(topo_zoom,levels=[10])  * gv.Points([(ilon,ilat)]) + precip_curve).opts(\n",
+    "    opts.Image(title=\"Precipitation (mm/day)\"),\n",
+    "    opts.Points(color='k',size=5),\n",
+    "    opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
+    "    opts.Curve(frame_width=400,frame_height=200))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot seasonal cycle over specific area"
    ]
   },
   {
@@ -257,7 +286,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_precip_zone.alti.hvplot.image(label='alti')"
+    "ds_precip = ds[['precip', 'alti']]\n",
+    "ds1_precip = ds1[['precip', 'alti']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the desired zone\n",
+    "ulat = 10\n",
+    "ulon = -10\n",
+    "blat = -1\n",
+    "blon = -20\n",
+    "\n",
+    "# /!\\ Slice works based on the ordering in coordinates, here lat goes from +90 -> -90 and lon from -180 -> +180\n",
+    "ds_precip_zone = ds_precip.sel(lat=slice(ulat, blat), lon=slice(blon, ulon))\n",
+    "ds1_precip_zone = ds1_precip.sel(lat=slice(0, -20), lon=slice(-65, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot precip over selected area\n",
+    "(zoom * gv.operation.contours(topo_zoom,levels=[10]) * gv.Rectangles([(blon, blat,ulon,ulat)])).opts(\n",
+    "    opts.Image(title=\"Precipitation (mm/day)\"),\n",
+    "    opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
+    "    opts.Rectangles(color=None,line_width=3))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " ds_precip_zone.precip.hvplot.image(label='precip').opts(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot elevation\n",
+    "#ds_precip_zone.alti.hvplot.image(label='alti').opts(cmap=Oleron_15.mpl_colormap,color_levels=10,clim=(0,1000))"
    ]
   },
   {
@@ -267,11 +347,11 @@
    "outputs": [],
    "source": [
     "# Extract values above a threshold\n",
-    "threshold = 1000\n",
+    "threshold = 1\n",
     "upper = ds_precip_zone.where(ds_precip_zone.alti >= threshold)\n",
-    "\n",
+    "upper1 = ds1_precip_zone.where(ds1_precip_zone.alti >= threshold)\n",
     "# Extract values below threshold but above sea level\n",
-    "lower = ds_precip_zone.where((ds_precip_zone.alti > 0) & (ds_precip_zone.alti < threshold))"
+    "#lower = ds_precip_zone.where((ds_precip_zone.alti > 0) & (ds_precip_zone.alti < threshold))"
    ]
   },
   {
@@ -280,16 +360,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upper.hvplot.image()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lower.hvplot.image()"
+    "#Plot precip with threshold for elevation\n",
+    "#upper.hvplot.image().opts(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20))"
    ]
   },
   {
@@ -305,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upper.precip.mean(dim=['lat', 'lon']).plot.line();"
+    "upper.precip.mean(dim=['lat', 'lon']).plot.line() + upper1.precip.mean(dim=['lat', 'lon']).plot.line()"
    ]
   },
   {
@@ -314,7 +386,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower.precip.mean(dim=['lat', 'lon']).plot.line();"
+    "#lower.hvplot.image()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lower.precip.mean(dim=['lat', 'lon']).plot.line();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lower.precip.sum(dim=['lat', 'lon']).plot() + upper.precip.sum(dim=['lat', 'lon']).plot();"
    ]
   },
   {
@@ -330,16 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower.precip.sum(dim=['lat', 'lon']).plot.line();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lower.precip.sum(dim=['lat', 'lon']).plot() + upper.precip.sum(dim=['lat', 'lon']).plot();"
+    "upper.precip.sum(dim=['lat', 'lon']).plot.line();"
    ]
   },
   {
@@ -364,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower.precip.sum(dim=['lat', 'lon']).cumsum().plot.line();"
+    "#lower.precip.sum(dim=['lat', 'lon']).cumsum().plot.line();"
    ]
   }
  ],
