Add automatic loading of simulations

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -102,11 +102,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bytes_data = BytesIO(file_upload.data[0])\n",
-    "ds = xr.open_dataset(bytes_data)\n",
-    "\n",
-    "bytes_data = BytesIO(file_upload.data[1])\n",
-    "ds1 = xr.open_dataset(bytes_data)"
+    "# Put dataset into a list \n",
+    "ds = []\n",
+    "for i in range(len(file_upload.data)):\n",
+    "    ds.append(xr.open_dataset(BytesIO(file_upload.data[i])))\n",
+    "names = list(file_upload.value.keys())"
    ]
   },
   {
@@ -116,8 +116,8 @@
    "outputs": [],
    "source": [
     "#Scale precipitation to convert in mm/day\n",
-    "ds['precip'] = ds['precip']*86400\n",
-    "ds1['precip'] = ds1['precip']*86400"
+    "for dss in ds:\n",
+    "    dss['precip'] = dss['precip']*86400"
    ]
   },
   {
@@ -126,11 +126,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds[['precip', 'phis']].precip.hvplot(title=\"Dataset 1\",\n",
+    "image = None \n",
+    "for i in range(len(ds)):\n",
+    "    dss=ds[i]\n",
+    "    hist = dss[['precip', 'phis']].precip.hvplot(title=f\"{names[i]}\",\n",
     "                                     width=300,\n",
-    "                                     height=300) + ds1[['precip', 'phis']].precip.hvplot(title=\"Dataset 2\",\n",
-    "                                                                                                   width=300,\n",
-    "                                                                                                   height=300)"
+    "                                     height=300)\n",
+    "    if image is None:\n",
+    "        image=hist\n",
+    "    else:\n",
+    "        image=image+hist\n",
+    "image"
    ]
   },
   {
@@ -140,9 +146,23 @@
    "outputs": [],
    "source": [
     "# Compute elevation from phis parameter\n",
-    "ds['alti'] = ds['phis']/9.81\n",
-    "ds1['alti'] = ds1['phis']/9.81\n",
-    "ds.alti.hvplot()\n"
+    "for i in range(len(ds)):\n",
+    "    ds[i]=ds[i].assign(alti=0)\n",
+    "\n",
+    "for dfs in ds:\n",
+    "    dfs['alti'] = dfs['phis']/9.81\n",
+    "    \n",
+    "image=None\n",
+    "for i in range(len(ds)):\n",
+    "    dss=ds[i]\n",
+    "    hist = dss[['alti',]].alti.hvplot(title=f\"{names[i]}\",\n",
+    "                                     width=300,\n",
+    "                                     height=300)\n",
+    "    if image is None:\n",
+    "        image=hist\n",
+    "    else:\n",
+    "        image=image+hist\n",
+    "image\n"
    ]
   },
   {
@@ -166,20 +186,20 @@
    "outputs": [],
    "source": [
     "# Plot monthly precipitations\n",
-    "topo = gv.Dataset(ds).to(gv.Image, ['lon','lat'],'alti')\n",
+    "topo = gv.Dataset(ds[1]).to(gv.Image, ['lon','lat'],'alti')\n",
     "\n",
     "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
     "\n",
-    "ensemble = gv.Dataset(ds).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "ensemble1 = gv.Dataset(ds1).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble = gv.Dataset(ds[1]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble1 = gv.Dataset(ds[0]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "(ensemble.opts(\n",
     "    title=\"Precipitation (mm/day)\",projection=crs.Robinson())* \n",
     " gv.operation.contours(topo,levels=[10]).opts(\n",
-    "     show_legend=False,line_width=1.5) + \n",
+    "     show_legend=False,cmap='gray_r',line_width=1.5) + \n",
     " ensemble1.opts(\n",
     "     colorbar=True,title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
     " gv.operation.contours(topo,levels=[10]).opts(\n",
-    "     show_legend=False),line_width=1.5)\n"
+    "     show_legend=False,cmap='gray_r',line_width=1.5))\n"
    ]
   },
   {
@@ -196,7 +216,7 @@
    "outputs": [],
    "source": [
     "# Compute difference between two simulations & zoom over specific region\n",
-    "difference = (ds.precip - ds1.precip)"
+    "difference = (ds[1].precip - ds[0].precip)"
    ]
   },
   {
@@ -238,8 +258,8 @@
    "source": [
     "# Select the desired zone\n",
     "# /!\\ Slice works based on the ordering in coordinates, here lat goes from +90 -> -90 and lon from -180 -> +180\n",
-    "ds_zone = ds.sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
-    "ds1_zone = ds1.sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
+    "ds_zone = ds[1].sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
+    "ds1_zone = ds[0].sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
     "topo_zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon','lat'],'alti')\n",
     "\n",
     "zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon', 'lat'], 'precip')\n",
@@ -286,8 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_precip = ds[['precip', 'alti']]\n",
-    "ds1_precip = ds1[['precip', 'alti']]\n"
+    "ds_precip = ds[1][['precip', 'alti']]\n",
+    "ds1_precip = ds[0][['precip', 'alti']]\n"
    ]
   },
   {
@@ -377,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upper.precip.mean(dim=['lat', 'lon']).plot.line() + upper1.precip.mean(dim=['lat', 'lon']).plot.line()"
+    "#upper.precip.mean(dim=['lat', 'lon']).plot.line()# + upper1.precip.mean(dim=['lat', 'lon']).plot.line()"
    ]
   },
   {
@@ -420,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upper.precip.sum(dim=['lat', 'lon']).plot.line();"
+    "#upper.precip.sum(dim=['lat', 'lon']).plot.line();"
    ]
   },
   {
@@ -436,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "upper.precip.sum(dim=['lat', 'lon']).cumsum().plot.line();"
+    "#upper.precip.sum(dim=['lat', 'lon']).cumsum().plot.line();"
    ]
   },
   {
