--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -162,7 +162,7 @@
     "        image=hist\n",
     "    else:\n",
     "        image=image+hist\n",
-    "image\n"
+    "#image\n"
    ]
   },
   {
@@ -185,13 +185,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "d1 = 0\n",
+    "d2 = 1\n",
     "# Plot monthly precipitations\n",
-    "topo = gv.Dataset(ds[1]).to(gv.Image, ['lon','lat'],'alti')\n",
+    "topo = gv.Dataset(ds[d1]).to(gv.Image, ['lon','lat'],'alti')\n",
     "\n",
     "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
     "\n",
-    "ensemble = gv.Dataset(ds[1]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "ensemble1 = gv.Dataset(ds[0]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble = gv.Dataset(ds[d1]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
+    "ensemble1 = gv.Dataset(ds[d2]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "(ensemble.opts(\n",
     "    title=\"Precipitation (mm/day)\",projection=crs.Robinson())* \n",
     " gv.operation.contours(topo,levels=[10]).opts(\n",
@@ -216,7 +218,7 @@
    "outputs": [],
    "source": [
     "# Compute difference between two simulations & zoom over specific region\n",
-    "difference = (ds[1].precip - ds[0].precip)"
+    "difference = (ds[d1].precip - ds[d2].precip)"
    ]
   },
   {
@@ -258,12 +260,21 @@
    "source": [
     "# Select the desired zone\n",
     "# /!\\ Slice works based on the ordering in coordinates, here lat goes from +90 -> -90 and lon from -180 -> +180\n",
-    "ds_zone = ds[1].sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
-    "ds1_zone = ds[0].sel(lat=slice(40, -40), lon=slice(-180, 180))\n",
-    "topo_zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon','lat'],'alti')\n",
+    "dzone=[]\n",
     "\n",
-    "zoom = gv.Dataset(ds_zone).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "zoom1 = gv.Dataset(ds1_zone).to(gv.Image, ['lon', 'lat'], 'precip')\n"
+    "for dss in ds:\n",
+    "    dzone.append(dss.sel(lat=slice(40, -40), lon=slice(-180, 180)))\n",
+    "dzone\n",
+    "\n",
+    "image=None\n",
+    "for i in range(2):\n",
+    "    dss=dzone[i]\n",
+    "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
+    "    if image is None:\n",
+    "        image=hist.opts(title=f\"{names[i]}\")\n",
+    "    else:\n",
+    "        image=image+hist.opts(title=f\"{names[i]}\")\n",
+    "image"
    ]
   },
   {
@@ -279,18 +290,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select lon & lat for a poit where to compute seasonal cycle.\n",
     "ilat=-5\n",
     "ilon=-30\n",
     "\n",
-    "precip_curve = hv.Curve(zoom.select(lon=ilon,lat=ilat), kdims=['time_counter'])\n",
-    "\n",
-    "# Plot \n",
-    "(zoom * gv.operation.contours(topo_zoom,levels=[10])  * gv.Points([(ilon,ilat)]) + precip_curve).opts(\n",
-    "    opts.Image(title=\"Precipitation (mm/day)\"),\n",
-    "    opts.Points(color='k',size=5),\n",
-    "    opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
-    "    opts.Curve(frame_width=400,frame_height=200))"
+    "image=None\n",
+    "for i in range(len(ds)):\n",
+    "    dss=dzone[i]\n",
+    "    hist_p = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
+    "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'alti')\n",
+    "    cont=gv.operation.contours(hist,levels=[10])\n",
+    "    precip_curve = hv.Curve(hist_p.select(lon=ilon,lat=ilat), kdims=['time_counter']).opts(frame_width=400,frame_height=200)\n",
+    "    \n",
+    "    if image is None:\n",
+    "        image=  (hist_p * cont * gv.Points([(ilon,ilat)]) + precip_curve).opts(\n",
+    "        opts.Image(title=\"Precipitation (mm/day)\"),\n",
+    "        opts.Points(color='k',size=5),\n",
+    "        opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
+    "        opts.Curve(frame_width=400,frame_height=200))\n",
+    "    else:\n",
+    "        image=image*precip_curve\n",
+    "image\n"
    ]
   },
   {
@@ -322,6 +341,24 @@
     "blat = -1\n",
     "blon = -20\n",
     "\n",
+    "darea=[]\n",
+    "\n",
+    "for dss in ds:\n",
+    "    darea.append(dss.sel(lat=slice(ulat, blat), lon=slice(blon, ulon)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the desired zone\n",
+    "ulat = 10\n",
+    "ulon = -10\n",
+    "blat = -1\n",
+    "blon = -20\n",
+    "\n",
     "# /!\\ Slice works based on the ordering in coordinates, here lat goes from +90 -> -90 and lon from -180 -> +180\n",
     "ds_precip_zone = ds_precip.sel(lat=slice(ulat, blat), lon=slice(blon, ulon))\n",
     "ds1_precip_zone = ds1_precip.sel(lat=slice(0, -20), lon=slice(-65, 0))"
@@ -334,7 +371,46 @@
    "outputs": [],
    "source": [
     "# Plot precip over selected area\n",
-    "(zoom * gv.operation.contours(topo_zoom,levels=[10]) * gv.Rectangles([(blon, blat,ulon,ulat)])).opts(\n",
+    "image=None\n",
+    "for i in range(len(ds)):\n",
+    "    dss=darea[i]\n",
+    "    dfs=dzone[i]\n",
+    "    hist_p = gv.Dataset(dfs).to(gv.Image, ['lon','lat'],'precip')\n",
+    "    continent= gv.Dataset(dfs).to(gv.Image, ['lon','lat'],'alti')\n",
+    "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'alti')\n",
+    "    cont=gv.operation.contours(continent,levels=[10])\n",
+    "    precip_curve = hv.Curve(hist_p.select(lon=ilon,lat=ilat), kdims=['time_counter']).opts(frame_width=400,frame_height=200)\n",
+    "    \n",
+    "    if image is None:\n",
+    "        image=  (hist_p * cont * gv.Rectangles([(blon, blat,ulon,ulat)])).opts(\n",
+    "        opts.Image(title=\"Precipitation (mm/day)\"),\n",
+    "        opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
+    "        opts.Rectangles(color=None,line_width=3))\n",
+    "    else:\n",
+    "        image=image\n",
+    "image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#darea[1].mean(dim=['lat', 'lon']).plot.line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "hist_p = gv.Dataset(dzone[1]).to(gv.Image, ['lon','lat'],'precip')\n",
+    "hist = gv.Dataset(dzone[1]).to(gv.Image, ['lon','lat'],'alti')\n",
+    "\n",
+    "(hist_p * gv.operation.contours(hist,levels=[10]) * gv.Rectangles([(blon, blat,ulon,ulat)])).opts(\n",
     "    opts.Image(title=\"Precipitation (mm/day)\"),\n",
     "    opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
     "    opts.Rectangles(color=None,line_width=3))\n",
