Fix projection issues

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -185,23 +185,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# choose the two simulations to use\n",
     "d1 = 0\n",
     "d2 = 1\n",
-    "# Plot monthly precipitations\n",
+    "\n",
     "topo = gv.Dataset(ds[d1]).to(gv.Image, ['lon','lat'],'alti')\n",
     "\n",
-    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=400,frame_height=200))\n",
+    "# Compute difference between two simulations & zoom over specific region\n",
+    "difference = (ds[d1].precip - ds[d2].precip)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot differences on a global projection\n",
+    "(gv.Dataset(difference).to(gv.Image, ['lon', 'lat'], 'precip').opts(\n",
+    "    width=600,height=300,\n",
+    "    cmap=Vik_10.mpl_colormap,color_levels=20,clim=(-15,15),\n",
+    "    colorbar=True,\n",
+    "    xlabel='Longitude',ylabel='Latitude',\n",
+    "    title='Precipitation anomaly (mm/day)',\n",
+    "    projection=crs.Robinson())*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False,cmap='gray_r',line_width=1.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Format outputs for monthly mean precipitation in order to plot\n",
+    "\n",
+    "\n",
+    "\n",
+    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=300,frame_height=300))\n",
     "\n",
     "ensemble = gv.Dataset(ds[d1]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
     "ensemble1 = gv.Dataset(ds[d2]).to(gv.Image, ['lon', 'lat'], 'precip')\n",
-    "(ensemble.opts(\n",
-    "    title=\"Precipitation (mm/day)\",projection=crs.Robinson())* \n",
-    " gv.operation.contours(topo,levels=[10]).opts(\n",
-    "     show_legend=False,cmap='gray_r',line_width=1.5) + \n",
-    " ensemble1.opts(\n",
-    "     colorbar=True,title=\"Precipitation (mm/day)\",projection=crs.Robinson())*\n",
-    " gv.operation.contours(topo,levels=[10]).opts(\n",
-    "     show_legend=False,cmap='gray_r',line_width=1.5))\n"
+    "\n",
+    "diff = gv.Dataset(difference).to(gv.Image, ['lon', 'lat'], 'precip')"
    ]
   },
   {
@@ -217,25 +243,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute difference between two simulations & zoom over specific region\n",
-    "difference = (ds[d1].precip - ds[d2].precip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot differences\n",
-    "(gv.Dataset(difference).to(gv.Image, ['lon', 'lat'], 'precip').opts(\n",
+    "#Plot\n",
+    "\n",
+    "(ensemble.opts(\n",
+    "    title=f\"{names[d1]}\",projection=crs.Orthographic(central_longitude=-20, central_latitude=0))* \n",
+    " gv.operation.contours(topo,levels=[10]).opts(\n",
+    "     show_legend=False,cmap='gray_r',line_width=1.5) + \n",
+    " ensemble1.opts(\n",
+    "     colorbar=True,title=f\"{names[d2]}\",projection=crs.Orthographic(central_longitude=-20, central_latitude=0))*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(\n",
+    "     show_legend=False,cmap='gray_r',line_width=1.5)) + (\n",
+    "    diff.opts(\n",
     "    width=600,height=300,\n",
     "    cmap=Vik_10.mpl_colormap,color_levels=20,clim=(-15,15),\n",
     "    colorbar=True,\n",
     "    xlabel='Longitude',ylabel='Latitude',\n",
-    "    title='Precipitation anomaly (mm/day)',\n",
-    "    projection=crs.Robinson())*\n",
-    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False,cmap='gray_r',line_width=1.5))"
+    "    title=\"∆ precip (1)-(2) (mm/day)\",\n",
+    "    projection=crs.Orthographic(central_longitude=-20, central_latitude=0))*\n",
+    " gv.operation.contours(topo,levels=[10]).opts(show_legend=False,cmap='gray_r',line_width=1.5))\n"
    ]
   },
   {
@@ -264,17 +289,17 @@
     "\n",
     "for dss in ds:\n",
     "    dzone.append(dss.sel(lat=slice(40, -40), lon=slice(-180, 180)))\n",
-    "dzone\n",
+    "#dzone\n",
     "\n",
-    "image=None\n",
-    "for i in range(2):\n",
-    "    dss=dzone[i]\n",
-    "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
-    "    if image is None:\n",
-    "        image=hist.opts(title=f\"{names[i]}\")\n",
-    "    else:\n",
-    "        image=image+hist.opts(title=f\"{names[i]}\")\n",
-    "image"
+    "#image=None\n",
+    "#for i in range(2):\n",
+    "#    dss=dzone[i]\n",
+    "#    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
+    "#    if image is None:\n",
+    "#        image=hist.opts(title=f\"{names[i]}\")\n",
+    "#    else:\n",
+    "#        image=image+hist.opts(title=f\"{names[i]}\")\n",
+    "#image"
    ]
   },
   {
@@ -293,9 +318,11 @@
     "ilat=-5\n",
     "ilon=-30\n",
     "\n",
+    "opts.defaults(opts.Image(cmap=Davos_10_r.mpl_colormap,color_levels=10,clim=(0,20),frame_width=300,frame_height=300))\n",
+    "\n",
     "image=None\n",
     "for i in range(len(ds)):\n",
-    "    dss=dzone[i]\n",
+    "    dss=ds[i]\n",
     "    hist_p = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
     "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'alti')\n",
     "    cont=gv.operation.contours(hist,levels=[10])\n",
@@ -303,9 +330,9 @@
     "    \n",
     "    if image is None:\n",
     "        image=  (hist_p * cont * gv.Points([(ilon,ilat)]) + precip_curve).opts(\n",
-    "        opts.Image(title=\"Precipitation (mm/day)\"),\n",
+    "        opts.Image(title=\"Precipitation (mm/day)\",projection=crs.Orthographic(central_longitude=-20, central_latitude=0)),\n",
     "        opts.Points(color='k',size=5),\n",
-    "        opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
+    "        opts.Contours(projection=crs.Orthographic(central_longitude=-20, central_latitude=0),show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
     "        opts.Curve(frame_width=400,frame_height=200))\n",
     "    else:\n",
     "        image=image*precip_curve\n",
