Fix calendar bug

--- a/Analysis/precipitation_analysis.ipynb
+++ b/Analysis/precipitation_analysis.ipynb
@@ -289,17 +289,7 @@
     "\n",
     "for dss in ds:\n",
     "    dzone.append(dss.sel(lat=slice(40, -40), lon=slice(-180, 180)))\n",
-    "#dzone\n",
-    "\n",
-    "#image=None\n",
-    "#for i in range(2):\n",
-    "#    dss=dzone[i]\n",
-    "#    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'precip')\n",
-    "#    if image is None:\n",
-    "#        image=hist.opts(title=f\"{names[i]}\")\n",
-    "#    else:\n",
-    "#        image=image+hist.opts(title=f\"{names[i]}\")\n",
-    "#image"
+    "#dzone\n"
    ]
   },
   {
@@ -307,6 +297,15 @@
    "metadata": {},
    "source": [
     "Then we compute cycle at one location and plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dss.time_counter"
    ]
   },
   {
@@ -406,25 +405,19 @@
     "    continent= gv.Dataset(dfs).to(gv.Image, ['lon','lat'],'alti')\n",
     "    hist = gv.Dataset(dss).to(gv.Image, ['lon','lat'],'alti')\n",
     "    cont=gv.operation.contours(continent,levels=[10])\n",
-    "    precip_curve = hv.Curve(hist_p.select(lon=ilon,lat=ilat), kdims=['time_counter']).opts(frame_width=400,frame_height=200)\n",
+    "    dfs['time_counter'] = np.arange(len(dfs.time_counter))\n",
+    "    precip_curve = hv.Curve(dfs.precip.mean(['lon', 'lat'])).opts(frame_width=400,frame_height=200)\n",
+    "    #precip_curve = plt.plot(dfs.precip.mean(['lon', 'lat']))\n",
     "    \n",
     "    if image is None:\n",
-    "        image=  (hist_p * cont * gv.Rectangles([(blon, blat,ulon,ulat)])).opts(\n",
+    "        image=  (hist_p * cont * gv.Rectangles([(blon, blat,ulon,ulat)]) + precip_curve).opts(\n",
     "        opts.Image(title=\"Precipitation (mm/day)\"),\n",
     "        opts.Contours(show_legend=False,line_width=1.5,cmap='gray_r',color_levels=0),\n",
-    "        opts.Rectangles(color=None,line_width=3))\n",
+    "        opts.Rectangles(color=None,line_width=3),\n",
+    "        opts.Curve(frame_width=400,frame_height=200))\n",
     "    else:\n",
     "        image=image\n",
     "image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#darea[1].mean(dim=['lat', 'lon']).plot.line"
    ]
   },
   {
